--- a/index.html
+++ b/index.html
@@ -67,27 +67,12 @@
   </section>    
 
 
-  <section class="page-size" id="banner">
+  <section id="banner">
     <div>        
         <h1 id="work-inquiry-color">WORK INQUIRY</h1>
         <a class="link-button" id="Chat-Button" target="_blank" href="#">Let's Chat</a>
     </div> 
   </section>
-
-
-
-<!-- <section class="final-sec">
-    <div class="row">
-        <div class="banner">
-            <img src="images/last.png" alt="" srcset="">
-            <P class="heading" >WORK INQUIRY</p>
-        </div>
-        <div class="link-button2">
-            <button>Let's Chat</button>
-        </div>
-
-    </div>
-</section> -->
 
 </body>
 </html>
